WR-913 fix events calendar search button to align with keyword input field in all browsers

--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/nhmwww/main/css/styles.css
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/nhmwww/main/css/styles.css
@@ -6108,12 +6108,12 @@ h6 {
   font-size: 1.375em;
 }
 .event--calendar--wrapper .search-keywords input {
-  height: 4.55em;
+  height: 4.56em;
   border: none;
 }
 .event--calendar--wrapper .search-icon {
   background-color: #EEEEEE;
-  height: 5.65em;
+  height: 5.7em;
   text-align: center;
   padding-top: 1.7em;
   cursor: pointer;
